<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:checked="false"
        android:text="@string/chech1" />

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:checked="true"
        android:text="@string/chech2" />

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:checked="false"
        android:text="@string/chech3" />

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:checked="false"
        android:text="@string/chech4" />

    <Button
        android:id="@id/ok_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom"
        android:text="@string/getconnect3"
        android:textColor="#ffffff" />

</LinearLayout>